# Calm-Data-Generator

./: .gitignore  ARCHITECTURE.md  AUTHORS  CHANGELOG.md  CHANGELOG_ES.md  CITATION.cff  CONTRIBUTING.md  CONTRIBUTING_ES.md  DATASET_VAE_GUIDE.md  DATASET_VAE_STATE_OF_ART.md  PRESENTACION_DATASET_VAE.md  README.md  README_ES.md  cart_drifted_feature_drift.csv  comparison_report.html  ctgan_drifted_feature_drift.csv  drift_stats.html  generated_profile.html  index.html  pyproject.toml  qq_plots.html  quality_scores.html  report_results.json  requirements.txt  statistical_tests.html
.github/scripts/: check_doc_pairs.py
.github/workflows/: compability.yml  main.yml  release.yml
calm_data_generator/: __init__.py  cli.py
calm_data_generator/docs/: API.md  API_ES.md  COMPLEX_GENERATOR_REFERENCE.md  COMPLEX_GENERATOR_REFERENCE_ES.md  DOCUMENTATION.md  DOCUMENTATION_ES.md  REAL_GENERATOR_REFERENCE.md  REAL_GENERATOR_REFERENCE_ES.md  REPORTS_REFERENCE.md  REPORTS_REFERENCE_ES.md  SCENARIO_INJECTOR_REFERENCE.md  SCENARIO_INJECTOR_REFERENCE_ES.md  STREAM_GENERATOR_REFERENCE.md  STREAM_GENERATOR_REFERENCE_ES.md
calm_data_generator/generators/: configs.py  persistence_models.py
calm_data_generator/generators/clinical/: Clinic.py  (+7 more)
calm_data_generator/presets/: BalancePreset.py  ConceptDriftPreset.py  CopulaPreset.py  DataQualityAuditPreset.py  DiffusionPreset.py  DriftScenarioPreset.py  FastPreset.py  FastPrototypePreset.py  GradualDriftPreset.py  HighFidelityPreset.py  ImbalancePreset.py  LongitudinalHealthPreset.py  OmicsIntegrationPreset.py  RareDiseasePreset.py  ScenarioInjectorPreset.py  SeasonalTimeSeriesPreset.py  SingleCellQualityPreset.py  TimeSeriesPreset.py
calm_data_generator/reports/: DiscriminatorReporter.py  LocalIndexGenerator.py  QualityReporter.py  Visualizer.py  _comparison.py  _correlation.py  _dimensionality.py  _distribution.py  _metrics_cards.py  _ml_utility_mixin.py  _privacy_metrics_mixin.py  _quality_scoring_mixin.py  _sequence.py  _single_cell_mixin.py  _statistical_similarity_mixin.py
calm_data_generator/tutorials/: clinical_generator.py  correlation_drift.py  real_block_generator.py  real_generator.py  reports_deep_dive.py  scenario_injector.py  stream_generator.py
mose_benchmark_test/: dataset_000.csv  dataset_001.csv  dataset_002.csv  dataset_003.csv  dataset_004.csv  dataset_005.csv  dataset_006.csv  dataset_007.csv  dataset_008.csv  dataset_009.csv  dataset_010.csv  dataset_011.csv  dataset_012.csv  dataset_013.csv  dataset_014.csv  dataset_015.csv  dataset_016.csv  dataset_017.csv  dataset_018.csv  dataset_019.csv  dataset_020.csv  dataset_021.csv  dataset_022.csv  dataset_023.csv  dataset_024.csv  dataset_025.csv  dataset_026.csv  dataset_027.csv  dataset_028.csv  dataset_029.csv  dataset_030.csv  dataset_031.csv  dataset_032.csv  dataset_033.csv  dataset_034.csv  dataset_035.csv  dataset_036.csv  dataset_037.csv  dataset_038.csv  dataset_039.csv  (+161 more)
tests/: test_accessors.py  test_cli.py  test_clinical_advanced.py  test_comprehensive.py  test_comprehensive_reporting.py  test_configs_validation.py  test_differentiation_factor.py  test_drift_injector_math.py  test_fit_sample_api.py  test_migration.py  test_presets.py  test_quality_metrics.py  test_real_block_generator.py  test_reporters_extended.py  test_reporting_fix.py  test_scgft_reporter.py  test_scvi_quality_regression.py  test_single_call.py  test_stream_block_generator.py
(+20 files in other folders)
