[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calm-data-generator"
version = "2.2.1"
description = "CALM-Data-Generator: A Python library for synthetic data generation with support for drift injection and clinical data."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Alejandro Belda Fernandez", email = "alejandrobeldafernandez@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
keywords = ["synthetic-data", "machine-learning", "generative-ai", "data-science", "drift-detection", "clinical-data", "privacy"]
dependencies = [
    "numpy>=1.26.4,<2.0.0",
    "pandas>=2.3.0,<2.4.0",
    "scipy>=1.14.0,<1.15.0",
    "tables>=3.10.0,<3.11.0",
    "h5py>=3.15.0,<3.16.0",
    "ydata-profiling>=4.18.0,<4.19.0",
    "synthcity>=0.2.12,<0.3.0",
    "opacus>=1.4.0,<1.5.0",
    "sdmetrics>=0.27.0,<0.28.0",
    "numba>=0.62.0,<0.63.0",
    "llvmlite>=0.45.0,<0.46.0",
    "scikit-learn>=1.7.0,<1.8.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "lightgbm>=4.6.0,<4.7.0",
    "imbalanced-learn>=0.14.0,<0.15.0",
    "copulae>=0.7.9,<0.8.0",
    "anndata>=0.11.0,<0.12.0",
    "scvi-tools>=1.3.0,<1.4.0",
    "scanpy>=1.10.0,<1.11.0",
    "lightning>=2.3.0,<2.4.0",
    "torchmetrics>=1.8.0,<1.9.0",
    "plotly>=6.5.0,<6.6.0",
    "huggingface-hub>=0.36.0,<1.0.0",
    "transformers>=4.22.1,<5.0.0",
    "xgboost>=2.1.0,<2.2.0",
    "hmmlearn>=0.3.0,<0.4.0",
    "pyarrow>=14.0.0,<15.0.0",
    "setuptools>=59.0.0,<70.0.0",
    "fsspec>=2025.12.0,<2026.0.0",
    "scgft-evaluator>=0.1.0,<0.2.0"
]

[project.urls]
"Homepage" = "https://github.com/AlejandroBeldaFernandez/Calm-Data_Generator"
"Bug Tracker" = "https://github.com/AlejandroBeldaFernandez/Calm-Data_Generator/issues"
[project.optional-dependencies]
stream = [
    "river>=0.21.0"
]

# GEARS/torch-geometric require CUDA/CPU-specific wheels from the PyG index.
# Install manually BEFORE installing this package:
#   pip install torch-geometric>=2.7.0 --find-links https://data.pyg.org/whl/torch-<VERSION>+<PLATFORM>.html
#   pip install cell-gears>=0.1.2
# Then: pip install calm-data-generator[gears]
gears = [
    "torch-geometric>=2.7.0",
    "cell-gears>=0.1.2,<0.2.0",
]

full = [
    "calm-data-generator[stream,gears]",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]   # errores, undefined names, warnings, imports
ignore = [
    "E501",   # line too long (black's job if ever added)
    "F401",   # unused imports (too noisy on large files)
    "E741",   # ambiguous variable names (l, O, I)
]

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.package-data]
calm_data_generator = ["tutorials/*.py", "docs/*.md"]

[project.scripts]
calm-data-generator = "calm_data_generator.cli:main"
